Added dropbox upload

--- a/config/dropbox.yml
+++ b/config/dropbox.yml
@@ -1,6 +1,6 @@
-app_key: "bkyvsb4cmmm0hhm"
-app_secret: "z5rdyevq6y1jzc6"
-access_token: "6ysgu9afpor20nbs"
-access_token_secret: "9u13ozxsks6vs3v"
+app_key: "fvy68r4m74zpql4"
+app_secret: "qzr104w1vtx11f3"
+access_token: "sx948kfquzk4seko"
+access_token_secret: "zx8admii7bfyjeo"
 user_id: "272120964"
-access_type: "dropbox"
+access_type: "app_folder"
